--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,7 +11,7 @@
 <h1 id="beschikbaarTickets"></h1>
 <ul id="menu" class="horizontal-list">
     <li><a href="mijnInteresses.html">Mijn interesses</a></li>
-    <li><a href="deelnemen.html">Ik wil deelnemen</a></li>
+    <li id="ikWilDeelnemen"><a href="deelnemen.html">Ik wil deelnemen</a></li>
 </ul>
 <ul id="datums" class="horizontal-list"></ul>
 <div>
